@@ -31,6 +31,9 @@ Version 1.4.3 - CVS
   - Improve display of some unparsable/absent dates (#891354).
   - Added non-anonymous LDAP bind and bind protocol patches from devel
   - Add comment (Highest,Normal,Lowest) to X-Priority header.
+  - Make writing of preferences, abook, calendars fail better when disk full
+    (#915527).
+
 
 Version 1.4.2 - 1 October 2003
 ------------------------------
